--- a/package.json
+++ b/package.json
@@ -12,18 +12,21 @@
   "author": "TeleportHQ",
   "license": "MIT",
   "dependencies": {
-    "next": "^12.1.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "@builder.io/dev-tools": "^0.2.10",
+    "@builder.io/react": "^3.1.1",
+    "@builder.io/sdk": "^2.1.1",
     "dangerous-html": "0.1.13",
-    "prop-types": "15.7.2"
+    "next": "^12.1.0",
+    "prop-types": "15.7.2",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   },
   "engines": {
     "node": ">=18.x"
   },
   "devDependencies": {
-    "tailwindcss": "^3.0.24",
     "autoprefixer": "^10.4.7",
-    "postcss": "^8.4.14"
+    "postcss": "^8.4.14",
+    "tailwindcss": "^3.0.24"
   }
 }
